tests/str_format_arg_count_bad.stderr
tests/str_format_arg_count_bad.hop:6:1: error: HOP2075: consteval error: format string error: not enough arguments
