tests/str_format_arg_count_bad.hop
// Verifies string format argument count is rejected.
fn main() {
	var s *str = format("x={i} {s}", 1 as i64)
	dealloc s
}
